# directIntegrationSolver

./: CMakeLists.txt  main.cpp  prepareMesh.cpp  prepareMesh.h
